# pico-quad-core-

pico_projects/: CMakeLists.txt  pico_enable_quad_spi.c
